<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 <modelVersion>4.0.0</modelVersion>

 <groupId>ru.biosoft.access</groupId>
 <artifactId>file</artifactId>
 <version>1.1.1</version>
 <packaging>jar</packaging>

 <name>File repository</name>
 <description>Core classes for FileDataCollection and repository.</description>
  <url>https://github.com/Biosoft-ru/access</url>

    <properties>
      <encoding>UTF-8</encoding>
      <maven.compiler.source>8</maven.compiler.source>
      <maven.compiler.target>8</maven.compiler.target>
    </properties>

    <licenses>
        <license>
            <name>GNU Affero General Public License (AGPL) version 3.0</name>
            <url>https://www.gnu.org/licenses/agpl-3.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <organization>Biosoft.Ru LLC</organization>
            <organizationUrl>https://github.com/Biosoft-ru</organizationUrl>
        </developer>
    </developers>

  <scm>
      <connection>scm:git:git://github.com/Biosoft-ru/access.git</connection>
      <developerConnection>scm:git:ssh://github.com/Biosoft-ru/access.git</developerConnection>
      <url>https://github.com/Biosoft-ru/access</url>
  </scm>

 <parent>
  <groupId>ru.biosoft.access</groupId>
  <artifactId>access</artifactId>
  <version>1.1.1</version>
 </parent>

 <dependencies>

  <dependency>
    <groupId>ru.biosoft.access</groupId>
    <artifactId>core</artifactId>
    <version>[1.1.0,)</version>
  </dependency>

  <dependency>
    <groupId>org.yaml</groupId>
    <artifactId>snakeyaml</artifactId>
    <version>1.30</version>
  </dependency>
  
  <dependency>
    <groupId>commons-io</groupId>
    <artifactId>commons-io</artifactId>
    <version>2.16.1</version>
  </dependency>

 </dependencies>


 <build>
  <plugins>

   <plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-compiler-plugin</artifactId>
   </plugin>

   <plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-javadoc-plugin</artifactId>
   </plugin>
   
   <plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-jar-plugin</artifactId>
   </plugin>
   
   <plugin>
    <groupId>org.apache.felix</groupId>
    <artifactId>maven-bundle-plugin</artifactId>
   </plugin>
   
   <plugin>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-source-plugin</artifactId>
   </plugin>

  </plugins>
 </build>
</project>
